fix cursor visibility in mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,7 @@ html {
 }
 
 .cursor {
+    display: none;
     position: absolute;
     box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7),
         1px 2px 4px 0px rgba(0, 255, 255, 0.7),
@@ -412,6 +413,10 @@ body {
 
 @media only screen and (min-width: 1200px) {
     body {
+        .cursor {
+            display: block;
+        }
+
         .container {
             .homepage {
                 .topBar {
